# claude-cygwin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  claude-shell-cygwin  deep_diagnostic.py  diagnose_timeout.py  pyproject.toml  quick_setup_cygwin.sh  quick_setup_real_fix.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup_cygwin.py  setup_dev.py  test_cygwin_fix.sh  test_direct_execution.py  test_hanging_fix.sh  test_timeout_fix.sh  tryit.sh
.github/workflows/: ci.yml
docs/: cygwin-compatibility.md  index.md  troubleshooting.md
examples/: advanced_usage.py  basic_usage.py
issue/diag/: 001.txt  002.txt  003.txt  004.txt
issue/install/: 001.txt  002.txt  003.txt  004.txt  006.txt
issue/main/: 001.txt
issue/test/: 001.txt
issue/tryit/: 001-resolution.md  001.txt  002-resolution.md  002.txt  003.txt  004-resolution.md  005.txt  006.txt
src/claude_shell_connector/: __init__.py  __main__.py
src/claude_shell_connector/cli/: __init__.py  main.py
src/claude_shell_connector/config/: __init__.py  settings.py
src/claude_shell_connector/core/: __init__.py  connector.py  exceptions.py
src/claude_shell_connector/helpers/: __init__.py  shell.py
tests/: __init__.py  test_basic.py  test_integration.py
